tree-sitter/tests/snapshots/snapshot__main@empty.chip.snap
---
source: tree-sitter/tests/snapshot.rs
assertion_line: 16
expression: "print(&tree, &source).trim()"
input_file: tree-sitter/tests/cases/empty.chip
---
file @ 0:0..0:0
