tree-sitter/tests/snapshots/snapshot__main@empty.snap
---
source: tree-sitter/tests/snapshot.rs
assertion_line: 18
expression: "print(&tree, &source).trim()"
---
file @ 0:0..0:0
