tree-sitter/tests/snapshots/snapshot__main@extern.snap
---
source: tree-sitter/tests/snapshot.rs
assertion_line: 18
expression: "print(&tree, &source).trim()"
---
file @ 0:0..5:0
  extern_block @ 0:0..2:1
    extern @ 0:0..0:10
      kw_extern @ 0:0..0:6
      abi:string_literal @ 0:7..0:10	"C"
    { @ 0:11..0:12
    item:extern_function @ 1:2..1:21
      fn @ 1:2..1:4
      name:identifier @ 1:5..1:12	foreign
      ( @ 1:13..1:14
      input:annotated @ 1:14..1:19
        identifier @ 1:14..1:15	n
        : @ 1:15..1:16
        basic_type @ 1:17..1:19
          path @ 1:17..1:19
            first_segment:identifier @ 1:17..1:19	u8
      ) @ 1:19..1:20
      ; @ 1:20..1:21
    } @ 2:0..2:1
  function @ 4:0..4:38
    modifier:function_modifier @ 4:0..4:10
      extern @ 4:0..4:10
        kw_extern @ 4:0..4:6
        abi:string_literal @ 4:7..4:10	"C"
    fn @ 4:11..4:13
    name:identifier @ 4:14..4:24	the_answer
    ( @ 4:24..4:25
    ) @ 4:25..4:26
    -> @ 4:27..4:29
    output:basic_type @ 4:30..4:32
      path @ 4:30..4:32
        first_segment:identifier @ 4:30..4:32	u8
    : @ 4:32..4:33
    body:numeric_literal @ 4:34..4:38
      digits:digits @ 4:34..4:36	42
      suffix:u8 @ 4:36..4:38
