tree-sitter/tests/snapshots/snapshot__main@simple.snap
---
source: tree-sitter/tests/snapshot.rs
assertion_line: 18
expression: "print(&tree, &source).trim()"
---
file @ 0:0..1:0
  function @ 0:0..0:10
    fn @ 0:0..0:2
    name:identifier @ 0:3..0:4	f
    ( @ 0:4..0:5
    ) @ 0:5..0:6
    : @ 0:6..0:7
    body:unit @ 0:8..0:10	()
